# clean

./: .gitignore  Cargo.toml  Containerfile  README.md  action.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  container.yml  cov.yml  lint-self.yml  master.yml  pull_request.yml
src/: main.rs
tests/: integration.rs
