[package]
name = "clean"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
glob = "0.3"
anyhow = "1.0.98"
log = "0.4.27"
env_logger = "0.11.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
